# Playable_Bosses

./: .gitignore  Cargo.toml  LICENSE.md  README.md  config.rs  lib.rs  writeable.rs
cargo/: config
dharkon/: mod.rs
galleom/: mod.rs
ganon/: mod.rs
github/workflows/: rust_build.yml
mastercrazy/: mod.rs
playable_masterhand/: mod.rs
rathalos/: mod.rs
src/: boss_helpers.rs  boss_runtime.rs  config.rs  debug.rs  lib.rs  readable.rs  selection.rs
src/crazyhand/: mod.rs
src/debug_masterhand/: mod.rs
src/dharkon/: mod.rs
src/dracula/: mod.rs
src/galeem/: mod.rs
src/galleom/: mod.rs
src/ganon/: mod.rs
src/gigabowser/: mod.rs
src/killdebug/: mod.rs
src/marx/: mod.rs
src/mastercrazy/: mod.rs  readable.rs
src/masterhand/: config.rs  mod.rs
src/masterhand/config/: readable.rs  writeable.rs
src/playable_masterhand/: mod.rs
src/rathalos/: mod.rs
src/shadow/: mod.rs
src/src/: lib.rs
src/src/dharkon/: mod.rs
src/src/dracula/: mod.rs
src/src/galeem/: mod.rs
src/src/galleom/: mod.rs
src/src/ganon/: mod.rs
src/src/marx/: mod.rs
src/src/mastercrazy/: mod.rs
src/src/playable_masterhand/: mod.rs
src/src/rathalos/: mod.rs
src/tabuu/: mod.rs
src/waluigi/: mod.rs
ultimate/mods/Bosses/: config.json  config.toml  info.ini  info.toml
ultimate/mods/Bosses/sound/bank/narration/: Hashes.txt  vc_narration_characall.nus3bank
ultimate/mods/Bosses/sound/param/: soundlabelinfo.sli
ultimate/mods/Bosses/ui/message/: msg_name.msbt
ultimate/mods/Bosses/ui/param/menu/: chara_icon_arrangement.prc
ultimate/mods/Bosses/ui/param/standard/: standard_route_crazyhand.prc  standard_route_darz.prc  standard_route_dracula.prc  standard_route_galleom.prc  standard_route_ganonboss.prc  standard_route_kiila.prc  standard_route_koopag.prc  standard_route_lioleus.prc  standard_route_marx.prc  standard_route_masterhand.prc  standard_route_mewtwo_masterhand.prc
ultimate/mods/Bosses/ui/replace/chara/chara_0/: chara_0_mewtwo_masterhand_00.bntx
ultimate/mods/Bosses/ui/replace/chara/chara_1/: chara_1_crazyhand_00.bntx  chara_1_masterhand_00.bntx  chara_1_mewtwo_masterhand_00.bntx
ultimate/mods/Bosses/ui/replace/chara/chara_12/: chara_12_mewtwo_masterhand_00.bntx
ultimate/mods/Bosses/ui/replace/chara/chara_2/: chara_2_crazyhand_00.bntx  chara_2_darz_00.bntx  chara_2_dracula_00.bntx  chara_2_galleom_00.bntx  chara_2_ganonboss_00.bntx  chara_2_kiila_00.bntx  chara_2_koopag_00.bntx  chara_2_lioleus_00.bntx  chara_2_marx_00.bntx  chara_2_masterhand_00.bntx  chara_2_mewtwo_masterhand_00.bntx
ultimate/mods/Bosses/ui/replace/chara/chara_3/: chara_3_mewtwo_masterhand_00.bntx
ultimate/mods/Bosses/ui/replace/chara/chara_4/: chara_4_crazyhand_00.bntx  chara_4_darz_00.bntx  chara_4_dracula_00.bntx  chara_4_galleom_00.bntx  chara_4_ganonboss_00.bntx  chara_4_kiila_00.bntx  chara_4_koopag_00.bntx  chara_4_lioleus_00.bntx  chara_4_marx_00.bntx  chara_4_mewtwo_masterhand_00.bntx
ultimate/mods/Bosses/ui/replace/chara/chara_7/: chara_7_crazyhand_00.bntx  chara_7_darz_00.bntx  chara_7_dracula_00.bntx  chara_7_galleom_00.bntx  chara_7_ganonboss_00.bntx  chara_7_kiila_00.bntx  chara_7_koopag_00.bntx  chara_7_lioleus_00.bntx  chara_7_marx_00.bntx  chara_7_masterhand_00.bntx  chara_7_mewtwo_masterhand_00.bntx
ultimate/mods/Bosses/ui/replace/skill/skill_0/: skill_0_crazyhand_special_lower_0.bntx  skill_0_crazyhand_special_normal_0.bntx  skill_0_crazyhand_special_side_0.bntx  skill_0_crazyhand_special_upper_0.bntx  skill_0_darz_special_lower_0.bntx  skill_0_darz_special_normal_0.bntx  skill_0_darz_special_side_0.bntx  skill_0_darz_special_upper_0.bntx  skill_0_dracula_special_lower_0.bntx  skill_0_dracula_special_normal_0.bntx  skill_0_dracula_special_side_0.bntx  (+33 more)
(+16 files in other folders)
