[package]
name = "comp_boss"
version = "1.1.3"
authors = ["GamerSubzero <GamerSubzero@gmail.com>, NemesisSSBU <PepeIsNoice@gmail.com>, ClaudeRiegan <supermariomasterbro@gmail.com>, jam1garner <jam1.mcleod@hotmail.com>"]
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000"

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/ultimate-research/skyline-smash.git" }
acmd = { git = "https://github.com/ultimate-research/skyline-acmd.git" }
serde = { version = "1.0.180", features = ["derive"] }
parking_lot = "0.12.1"
toml = "0.7.6"
lazy_static = "1.4.0"
smash_script = { git = "https://github.com/blu-dev/smash-script.git" }
arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api" }
bntx = { git = "https://github.com/ScanMountGoat/bntx.git", branch="main" }
prc-rs = { git = "https://github.com/ultimate-research/prc-rs", features = ["indexmap-std"] }
rand = { git = "https://github.com/skyline-rs/rand" }

[patch.crates-io]
getrandom = { git = "https://github.com/skyline-rs/getrandom" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
